# Flat

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt  README.md  compile_line.txt  main.cpp
cpp/flat/: glad.c  nanovg.c
cpp/flat/gl/: flat_backend_GL.cpp  flat_backend_GL.h
cpp/flat/svg/: flat_backend_SVG.cpp  flat_backend_SVG.h
cpp/flat/wl/: flat_backend_WL.cpp  flat_backend_WL.h
cpp/include/glad/: glad.h
cpp/include/nanovg/: nanovg.h  nanovg_gl.h
cpp/src/: nanovg.c
cpp/src/flatvectors/: curves.cpp  curves.h  flatvectors.cpp  flatvectors.h  font.cpp  font.h  pack.cpp  pack.h  render.cpp  render.h  triangulate.cpp  triangulate.h  utf8.cpp  utf8.h
cpp/src/gl/: flat_backend_GL.cpp  flat_backend_GL.h
cpp/src/ml/: flat_backend_ML.cpp  flat_backend_ML.h
cpp/src/svg/: flat_backend_SVG.cpp  flat_backend_SVG.h
cpp/src/wl/: flat_backend_WL.cpp  flat_backend_WL.h
images/: Layout.ai
python/fonts/: splitter.py  splitter2.py
res/: material.theme
res/resources/: default.frg.glsl  default.vtx.glsl  fragment.glsl  shadow.frg.glsl  shadow.vtx.glsl  vertex.glsl
res/screen_test/: screen_test.uxml
res/themes/: material.uxss
src/flat/: Application.java  FileUtils.java  Flat.java  Internal.java
src/flat/acess/: GL.java  GLEnuns.java  GLFW.java  Keycode.java  WL.java
src/flat/animations/: Animation.java  AnimationKernel.java  ElevationAnimation.java  Interpolation.java  NormalizedAnimation.java  PropertyAnimation.java  StateAnimation.java  StateBitset.java  StateInfo.java  TransformAnimation.java
src/flat/application/: Activity.java  Application.java  GraphicTask.java  ResourcesManager.java  Settings.java
src/flat/backend/: GL.java  GLEnuns.java  ML.java  SVG.java  SVGEnuns.java  WL.java  WLEnuns.java
src/flat/context/: Context.java  Context3D.java  FragmentShader.java  Shader.java  ShaderProgram.java  Texture.java  VertexShader.java
src/flat/events/: ActionEvent.java  ActionListener.java  DragEvent.java  DragListener.java  DrawListener.java  Event.java  FocusEvent.java  FocusListener.java  HoverEvent.java  HoverListener.java  KeyEvent.java  KeyListener.java  PointerEvent.java  PointerListener.java  ScrollEvent.java  ScrollListener.java
src/flat/graphics/: Color.java  Context.java  ContextObject.java  Font.java  RoundRect.java  Shader.java  (+4 more)
src/test/: Main.java  MainActivity.java  Packer.java  Test.java  Teste2.java
test/: NeutronFlat.rar
(+1008 files in other folders)
